--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "firebase": "^9.6.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-sweetalert2": "^0.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
